apps/airflow/netpol-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    component: custom
  name: allow-egress-to-internet
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
      to:
        - ipBlock:
            # api.harvestapp.com
            cidr: 34.107.228.235/32
        - ipBlock:
            # bigquery.googleapis.com
            cidr: 142.250.199.10/32
        - ipBlock:
            # googleapis.com
            cidr: 172.217.174.164/32
        - ipBlock:
            # graph.facebook.com
            cidr: 163.70.132.1/32
        - ipBlock:
            # api.linkedin.com
            cidr: 108.174.10.22/32
        - ipBlock:
            # api.pipedrive.com
            cidr: 104.18.188.228/32
        - ipBlock:
            # api.pipedrive.com
            cidr: 104.18.189.228/32
